tests/error/comptime/check_destruct_value2.bz
function test()
{
	(consteval {
		const p = __builtin_comptime_malloc(int32, 5);
		defer __builtin_comptime_free(p);
		__builtin_trivially_set_values(p, 0, 5);

		__builtin_destruct_value(*(p + 5));
	});
}
